Restructuring catalogue data, adding link in dropdown, restyling AppHeader and fixing broken styles

--- a/src/client/public/app.css
+++ b/src/client/public/app.css
@@ -12,7 +12,7 @@ img, video {
 }
 
 .card--title {
-    margin-top: 5rem !important;
+    margin-top: 2rem !important;
 }
 
 .playlistcard--grid {
